[gd_scene load_steps=10 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Ball.tscn" type="PackedScene" id=2]
[ext_resource path="res://Oponente.gd" type="Script" id=3]
[ext_resource path="res://Level.gd" type="Script" id=4]
[ext_resource path="res://PoetsenOne-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://basketball-court-vector.webp" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 960, 50 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 50, 540 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 5 )

[node name="Level" type="Node2D"]
script = ExtResource( 4 )

[node name="Cancha" type="Sprite" parent="."]
position = Vector2( 915, 538 )
scale = Vector2( 3.06901, 2.61225 )
texture = ExtResource( 6 )

[node name="ParedSuperior" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ParedSuperior"]
position = Vector2( 960, -50 )
shape = SubResource( 1 )

[node name="ParedInferior" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ParedInferior"]
position = Vector2( 960, 1130 )
shape = SubResource( 1 )

[node name="ArcoPlayer" type="Area2D" parent="."]
modulate = Color( 0.0980392, 0.0313726, 0.87451, 1 )
self_modulate = Color( 0.0745098, 0.831373, 0.247059, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ArcoPlayer"]
position = Vector2( -50, 540 )
shape = SubResource( 2 )

[node name="ArcoOponente" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ArcoOponente"]
position = Vector2( 1970, 540 )
shape = SubResource( 2 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 50, 460 )

[node name="Oponente" parent="." instance=ExtResource( 1 )]
position = Vector2( 1870, 460 )
script = ExtResource( 3 )

[node name="MarcadorPlayer" type="Label" parent="."]
anchor_right = 200.0
margin_left = -300.0
margin_top = -1000.0
margin_right = 1980.0
margin_bottom = 1080.0
custom_colors/font_color = Color( 0.0509804, 0.866667, 0.0627451, 1 )
custom_fonts/font = SubResource( 3 )
text = "MarcadorPlayer"
align = 1
valign = 1

[node name="MarcadorOponente" type="Label" parent="."]
anchor_right = 200.0
margin_left = 200.0
margin_top = -1000.0
margin_right = 1980.0
margin_bottom = 1080.0
custom_colors/font_color = Color( 0.0509804, 0.866667, 0.0627451, 1 )
custom_fonts/font = SubResource( 3 )
text = "MarcadorOponente"
align = 1
valign = 1

[node name="Ball" parent="." instance=ExtResource( 2 )]
position = Vector2( 902, 271 )

[node name="RestarTimer" type="Timer" parent="."]

[connection signal="body_entered" from="ArcoPlayer" to="." method="_on_ArcoPlayer_body_entered"]
[connection signal="body_entered" from="ArcoOponente" to="." method="_on_ArcoOponente_body_entered"]
[connection signal="timeout" from="RestarTimer" to="Ball" method="_on_RestarTimer_timeout"]
